# lr

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: bench.yaml
generator-utils/: Cargo.toml
generator-utils/src/: grammar.rs  lib.rs  lr.rs
lr-core/: Cargo.toml
lr-core/src/: grammar.rs  lib.rs  lr.rs  ordered_set.rs  testing_parser.rs
lr-core/src/lr/: mod.rs  ordered_set.rs
lr-core/src/prelude/v1/: mod.rs
lr-derive/: Cargo.toml
lr-derive/examples/basic/: main.rs
lr-derive/src/: lib.rs
lr-derive/tests/: embedded_values.rs  mod.rs
lr-macros/: Cargo.toml
lr-macros/examples/: grammar.rs  parens.rs
lr-macros/src/: grammar.rs  lib.rs  lr.rs
lr-tests/: Cargo.toml
lr-tests/benches/: nested_token_expression_parsing.rs  simple_expression_parsing.rs  table_generation.rs
lr-tests/examples/: embedded_values.rs
lr-tests/tests/: basic.rs  embedded_values.rs  mod.rs  stateful.rs  stateful_with_tokens_with_references.rs  tokens_with_references.rs
macros/: Cargo.toml
src/: grammar.rs  lib.rs  lr.rs
