[package]
name = "lr-tests"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "nested_token_expression_parsing"
path = "benches/nested_token_expression_parsing.rs"
harness = false

[dev-dependencies]
criterion = "0.4"

[dependencies]
lr-core = { path = "../lr-core" }
lr-derive = { path = "../lr-derive" }
